tests/snapshots/scripts_sanitized/Admin API Tool/Databases - ID 21/List Databases - ID 23.txt.snap
---
source: src/main.rs
expression: output_content
---
#  PURPOSE: List Databases
#  HISTORY:
     - Created:   2018-05-09 by Mike Duncan (mduncan@soliantconsulting.com)
     - Modified:  2018-MM-DD by FName LName

AnwenderAbbruchZulassen setzen [ ON ]
Fehleraufzeichnung setzen [ ON ]
Variable setzen [ $error ; 0 ]

# -------------------------------------------------------------
#  SET-UP
# -------------------------------------------------------------
Script ausführen [ Aus Liste ; "Set Config" ]
Variable setzen [ $endpoint ; "/databases" ]
Variable setzen [ $curloptions ; " --request GET" &
				" --header \"Authorization: Bearer " & $$my.token & "\"" &
				" --header \"Content-Type: application/json\"" &
				" --dump-header $$my.headers" ]

# -------------------------------------------------------------
#  PROCESS
# -------------------------------------------------------------
Aus URL einfügen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "160" ] ⚠️⚠️⚠️
Script ausführen [ Aus Liste ; "Handle response" ]

Wenn [ Hole ( ScriptErgebnis ) = "1" ]
	# parse json response
	Feldwert setzen [ FMS__fmserver::totalDBCount ; JSONGetElement ( $$my.result ; "response.totalDBCount" ) ]
	Feldwert setzen [ FMS__fmserver::openDBCount ; JSONGetElement ( $$my.result ; "response.openDBCount" ) ]
	
	Variable setzen [ $this.id ; FMS__fmserver::ID ]
	# get files
	Fenster fixieren
	Wenn [ IstLeer ( FMS_FIL__files::ID ) ]
		Gehe zu Layout [ Layout: "FIL__files" ; Animation: Ohne ]
	Sonst
		Gehe zu Bezugsdatensatz ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "74" ] ⚠️⚠️⚠️
		Alle Datensätze löschen [ Mit Dialog: OFF ]
	Ende (wenn)
	Variable setzen [ $this.loop ; 0 ]
	Schleife (Anfang) [ Flush: Immer ]
		Wenn [ NICHT IstLeer ( JSONGetElement ( $$my.result ; "response.databases[" & $this.loop & "].id" ) ) ]
			Neuer Datensatz/Abfrage
			Feldwert setzen [ FIL__files::ID_Server ; $this.id ]
			Feldwert setzen [ FIL__files::filename ; JSONGetElement ( $$my.result ; "response.databases[" & $this.loop & "].filename" ) ]
			Feldwert setzen [ FIL__files::folder ; JSONGetElement ( $$my.result ; "response.databases[" & $this.loop & "].folder" ) ]
			Feldwert setzen [ FIL__files::id_files ; JSONGetElement ( $$my.result ; "response.databases[" & $this.loop & "].id" ) ]
			Feldwert setzen [ FIL__files::isEncrypted ; JSONGetElement ( $$my.result ; "response.databases[" & $this.loop & "].isEncrypted" ) ]
			Feldwert setzen [ FIL__files::size ; JSONGetElement ( $$my.result ; "response.databases[" & $this.loop & "].size" ) ]
			Feldwert setzen [ FIL__files::status ; JSONGetElement ( $$my.result ; "response.databases[" & $this.loop & "].status" ) ]
			Feldwert setzen [ FIL__files::hasSavedDecryptKey ; JSONGetElement ( $$my.result ; "response.databases[" & $this.loop & "].hasSavedDecryptKey" ) ]
			Feldwert setzen [ FIL__files::clients ; JSONGetElement ( $$my.result ; "response.databases[" & $this.loop & "].clients" ) ]
			Feldwert setzen [ FIL__files::decryptHint ; JSONGetElement ( $$my.result ; "response.databases[" & $this.loop & "].decryptHint" ) ]
			Feldwert setzen [ FIL__files::enabledExtPrivileges ; JSONGetElement ( $$my.result ; "response.databases[" & $this.loop & "].enabledExtPrivileges" ) ]
		Ende (wenn)
		
		Variable setzen [ $this.loop ; $this.loop + 1 ]
		Verlasse Schleife wenn [ IstLeer ( JSONGetElement ( $$my.result ; "response.databases[" & $this.loop & "].id" ) ) ]
		
	Schleife (Ende)
	
	Gehe zu Layout [ Layout: <Originallayout> ; Animation: Ohne ]
	Gehe zu Objekt [ "panel_files" ]
	
Ende (wenn)

# -------------------------------------------------------------
#  CLEAN UP
# -------------------------------------------------------------
Wenn [ $error = 0 ]
	#  set to exit true if you do not need to pass an error
	Variable setzen [ $error ; 1 // exit true ]
Ende (wenn)

Aktuelles Script verlassen [ $error ]
