tests/snapshots/scripts_sanitized/Admin API Tool/Databases - ID 21/Perform Database Operations for All Databases ( json ) - ID 67.txt.snap
---
source: src/main.rs
expression: output_content
---
#  PURPOSE: Perform action on all Database
#  HISTORY:
				   - Created:   2018-05-09 by Mike Duncan (mduncan@soliantconsulting.com)
				   - Modified:  2018-06-28 by FName LName
# JSON DOCUMENTATION:
# Notes: The following parameters are documented here. For each action, additional parameters are also listed, optional parameters are shown in square brackets "[]".
#  status

#  JSON EXAMPLE:
# JSONSetElement ( "" 
				 ; [ "status" ; "OPENED" ; JSONString ]
				)

AnwenderAbbruchZulassen setzen [ ON ]
Fehleraufzeichnung setzen [ ON ]
Variable setzen [ $error ; 0 ]

#  Validate json parameter and load it into local variables
Wenn [ JsonToVars ( Hole ( ScriptParameter ) ; "_" ) ]
	Eigenes Dialogfeld anzeigen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "87" ] ⚠️⚠️⚠️
	Aktuelles Script verlassen [ 5 // command is invalid ]
Ende (wenn)

# -------------------------------------------------------------
#  SET-UP
# -------------------------------------------------------------
Script ausführen [ Aus Liste ; "Set Config" ]
Variable setzen [ $endpoint ; "/databases" ]
Wenn [ $_status = "OPENED" ]
	Variable setzen [ $json ; JSONSetElement ( "" ; 
					  [ "status"; $_status ; JSONString ]
					 ) ]
Sonst, wenn [ $_status = "PAUSED" ]
	Variable setzen [ $json ; JSONSetElement ( "" ; 
					  [ "status"; $_status ; JSONString ]
					 ) ]
Sonst, wenn [ $_status = "RESUMED" ]
	Variable setzen [ $json ; JSONSetElement ( "" ; 
					  [ "status"; $_status ; JSONString ]
					 ) ]
Sonst, wenn [ $_status = "CLOSED" ]
	Variable setzen [ $json ; JSONSetElement ( $json ; "status"; $_status ; JSONString ) ]
	Wenn [ NICHT IstLeer ( FMS__fmserver::zz_msg_g ) ]
		Variable setzen [ $json ; JSONSetElement ( $json ; "messageText" ; FMS__fmserver::zz_msg_g ; JSONString ) ]
	Ende (wenn)
	Wenn [ FMS__fmserver::zz_force_g = 1 ]
		Variable setzen [ $json ; JSONSetElement ( $json ; "force" ; "true" ; JSONBoolean ) ]
	Ende (wenn)
Ende (wenn)
Variable setzen [ $curloptions ; " --request PATCH" &
				" --header \"Authorization: Bearer " & $$my.token & "\"" &
				" --header \"Content-Type: application/json\"" &
				" --data @$json" &
				" --dump-header $$my.headers" ]
# set api update variable
Variable setzen [ $$API.UPDATE ; "1" ]

# -------------------------------------------------------------
#  PROCESS
# -------------------------------------------------------------
Aus URL einfügen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "160" ] ⚠️⚠️⚠️
Script ausführen [ Aus Liste ; "Handle response" ]
# update database listing
Script ausführen [ Aus Liste ; "List Databases" ]

# -------------------------------------------------------------
#  CLEAN UP
# -------------------------------------------------------------
Wenn [ $error = 0 ]
	#  set to exit true if you do not need to pass an error
	Variable setzen [ $error ; 1 // exit true ]
Ende (wenn)

Aktuelles Script verlassen [ $error ]
